--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -34,5 +34,11 @@ clean-targets:         # directories to be removed by `dbt clean`
 models:
   my_new_project:
     # Applies to all files under models/example/
-    example:
-      materialized: view
+    stg: 
+      materialized: ephemeral
+      +transient: false
+      schema: 'cur_patients'
+
+    cur_patients:
+      materialized: table
+      schema: 'cur_patients'
